// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prototype-v0 characterization fixtures > 'shallow cabinet with a wardrobe rod' 1`] = `
{
  "costs": {
    "delivery": 4500,
    "hardware": 10960,
    "labor": 9904,
    "margin": 10651.589696,
    "materials": 27893.94848,
    "total": 63909.538176,
  },
  "edgeMeters": 42.5,
  "hinges": 12,
  "leadDays": 10,
  "parts": [
    {
      "height": 450,
      "material": "body",
      "name": "Боковина",
      "quantity": 2,
      "width": 2400,
    },
    {
      "height": 450,
      "material": "body",
      "name": "Крышка",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 450,
      "material": "body",
      "name": "Дно",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 2368,
      "material": "back",
      "name": "Задняя стенка",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 450,
      "material": "body",
      "name": "Перегородка",
      "quantity": 2,
      "width": 2368,
    },
    {
      "height": 430,
      "material": "body",
      "name": "Полка секции 1",
      "quantity": 4,
      "width": 776.6666666666666,
    },
    {
      "height": 430,
      "material": "body",
      "name": "Полка секции 2",
      "quantity": 1,
      "width": 776.6666666666666,
    },
    {
      "height": 160,
      "material": "body",
      "name": "Боковина ящика 2",
      "quantity": 6,
      "width": 450,
    },
    {
      "height": 160,
      "material": "body",
      "name": "Перед/зад ящика 2",
      "quantity": 6,
      "width": 708.6666666666666,
    },
    {
      "height": 450,
      "material": "back",
      "name": "Дно ящика 2",
      "quantity": 3,
      "width": 708.6666666666666,
    },
    {
      "height": 430,
      "material": "body",
      "name": "Полка секции 3",
      "quantity": 4,
      "width": 776.6666666666666,
    },
    {
      "height": 2396,
      "material": "facade",
      "name": "Фасад",
      "quantity": 3,
      "width": 797.3333333333334,
    },
  ],
  "rods": 1,
  "runners": 3,
  "sheets": 3,
  "warnings": [
    "Глубины недостаточно для стандартной продольной штанги.",
  ],
}
`;

exports[`prototype-v0 characterization fixtures > 'standard cabinet shown by the prototy…' 1`] = `
{
  "costs": {
    "delivery": 4500,
    "hardware": 10960,
    "labor": 9904,
    "margin": 10716.949696,
    "materials": 28220.74848,
    "total": 64301.69817599999,
  },
  "edgeMeters": 51.1,
  "hinges": 12,
  "leadDays": 10,
  "parts": [
    {
      "height": 600,
      "material": "body",
      "name": "Боковина",
      "quantity": 2,
      "width": 2400,
    },
    {
      "height": 600,
      "material": "body",
      "name": "Крышка",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 600,
      "material": "body",
      "name": "Дно",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 2368,
      "material": "back",
      "name": "Задняя стенка",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 600,
      "material": "body",
      "name": "Перегородка",
      "quantity": 2,
      "width": 2368,
    },
    {
      "height": 580,
      "material": "body",
      "name": "Полка секции 1",
      "quantity": 4,
      "width": 776.6666666666666,
    },
    {
      "height": 580,
      "material": "body",
      "name": "Полка секции 2",
      "quantity": 1,
      "width": 776.6666666666666,
    },
    {
      "height": 160,
      "material": "body",
      "name": "Боковина ящика 2",
      "quantity": 6,
      "width": 450,
    },
    {
      "height": 160,
      "material": "body",
      "name": "Перед/зад ящика 2",
      "quantity": 6,
      "width": 708.6666666666666,
    },
    {
      "height": 450,
      "material": "back",
      "name": "Дно ящика 2",
      "quantity": 3,
      "width": 708.6666666666666,
    },
    {
      "height": 580,
      "material": "body",
      "name": "Полка секции 3",
      "quantity": 4,
      "width": 776.6666666666666,
    },
    {
      "height": 2396,
      "material": "facade",
      "name": "Фасад",
      "quantity": 3,
      "width": 797.3333333333334,
    },
  ],
  "rods": 1,
  "runners": 3,
  "sheets": 3,
  "warnings": [],
}
`;

exports[`prototype-v0 characterization fixtures > 'tall cabinet with MDF facades' 1`] = `
{
  "costs": {
    "delivery": 4500,
    "hardware": 11590,
    "labor": 9904,
    "margin": 16061.823295999999,
    "materials": 54315.116480000004,
    "total": 96370.939776,
  },
  "edgeMeters": 53,
  "hinges": 15,
  "leadDays": 18,
  "parts": [
    {
      "height": 600,
      "material": "body",
      "name": "Боковина",
      "quantity": 2,
      "width": 2700,
    },
    {
      "height": 600,
      "material": "body",
      "name": "Крышка",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 600,
      "material": "body",
      "name": "Дно",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 2668,
      "material": "back",
      "name": "Задняя стенка",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 600,
      "material": "body",
      "name": "Перегородка",
      "quantity": 2,
      "width": 2668,
    },
    {
      "height": 580,
      "material": "body",
      "name": "Полка секции 1",
      "quantity": 4,
      "width": 776.6666666666666,
    },
    {
      "height": 580,
      "material": "body",
      "name": "Полка секции 2",
      "quantity": 1,
      "width": 776.6666666666666,
    },
    {
      "height": 160,
      "material": "body",
      "name": "Боковина ящика 2",
      "quantity": 6,
      "width": 450,
    },
    {
      "height": 160,
      "material": "body",
      "name": "Перед/зад ящика 2",
      "quantity": 6,
      "width": 708.6666666666666,
    },
    {
      "height": 450,
      "material": "back",
      "name": "Дно ящика 2",
      "quantity": 3,
      "width": 708.6666666666666,
    },
    {
      "height": 580,
      "material": "body",
      "name": "Полка секции 3",
      "quantity": 4,
      "width": 776.6666666666666,
    },
    {
      "height": 2696,
      "material": "facade",
      "name": "Фасад",
      "quantity": 3,
      "width": 797.3333333333334,
    },
  ],
  "rods": 1,
  "runners": 3,
  "sheets": 3,
  "warnings": [
    "Высота выше 2600 мм требует проверки транспорта и монтажа.",
  ],
}
`;

exports[`prototype-v0 characterization fixtures > 'two sections wider than the current l…' 1`] = `
{
  "costs": {
    "delivery": 4500,
    "hardware": 9640,
    "labor": 8480,
    "margin": 10195.484336,
    "materials": 28357.42168,
    "total": 61172.906016,
  },
  "edgeMeters": 44.3,
  "hinges": 8,
  "leadDays": 9,
  "parts": [
    {
      "height": 600,
      "material": "body",
      "name": "Боковина",
      "quantity": 2,
      "width": 2400,
    },
    {
      "height": 600,
      "material": "body",
      "name": "Крышка",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 600,
      "material": "body",
      "name": "Дно",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 2368,
      "material": "back",
      "name": "Задняя стенка",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 600,
      "material": "body",
      "name": "Перегородка",
      "quantity": 1,
      "width": 2368,
    },
    {
      "height": 580,
      "material": "body",
      "name": "Полка секции 1",
      "quantity": 4,
      "width": 1174,
    },
    {
      "height": 580,
      "material": "body",
      "name": "Полка секции 2",
      "quantity": 1,
      "width": 1174,
    },
    {
      "height": 160,
      "material": "body",
      "name": "Боковина ящика 2",
      "quantity": 6,
      "width": 450,
    },
    {
      "height": 160,
      "material": "body",
      "name": "Перед/зад ящика 2",
      "quantity": 6,
      "width": 1106,
    },
    {
      "height": 450,
      "material": "back",
      "name": "Дно ящика 2",
      "quantity": 3,
      "width": 1106,
    },
    {
      "height": 2396,
      "material": "facade",
      "name": "Фасад",
      "quantity": 2,
      "width": 1197,
    },
  ],
  "rods": 1,
  "runners": 3,
  "sheets": 3,
  "warnings": [
    "Секция 1176 мм слишком широкая — нужна перегородка.",
  ],
}
`;
